# 10x

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONSTITUTION.md  INSTALL.md  LOOM.md  LOOM_CONTEXT.md  LOOM_ROADMAP.md  LOOM_ZERO_HYPOTHESIS.md  MANIFEST.in  Makefile  PROTOCOL.md  README.md  SKILL.md  gemini-bootstrap.md  gemini-extension.json  loom-roster.yml  open-loom.mjs  opencode.json  package.json  pyproject.toml  skills
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.opencode/: commands  skills
.tickets/: al-8a52.md  al-f351.md  al-f4d2.md
autoresearch/: README.md  build_trial_seed_index.py  offline_score.py  program.md  report.py  run_codex_subject.py  run_full_codex.py  run_micro.py  run_once.py  run_subject.py  validate.py
claude-hooks/: hooks.json
commands/: loom-accept.md  loom-brainstorm.md  loom-compound.md  loom-debug.md  loom-decide.md  loom-map.md  loom-memory-housekeeping.md  loom-memory-reflect.md  loom-orient.md  loom-plan.md  loom-repair.md  loom-research.md  loom-retrospective.md  loom-review.md  loom-setup.md  loom-ship.md  loom-sketch.md  loom-spec.md  loom-spike.md  loom-status.md  loom-ticket.md  loom-wiki.md  loom-work.md
docs/: openapi.yaml
examples/: README.md
hooks/: hooks.json
loom-core/: README.md  gemini-bootstrap.md  gemini-extension.json  loom-core.mjs  package.json
loom-mill/: README.md  pyproject.toml
loom-playbooks/: README.md  gemini-extension.json  loom-playbooks.mjs  (+1 more)
(+3143 files in other folders)
