[project]
name = "loom"
version = "0.1.0"
description = "Loom workspace CLI — Markdown-first project management"
requires-python = ">=3.10"

[project.scripts]
loom = "loom.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["loom*"]
